Small layout bugs fixed

--- a/src/app/page-not-found/page-not-found.component.css
+++ b/src/app/page-not-found/page-not-found.component.css
@@ -9,6 +9,4 @@
     align-items: center;
     -webkit-box-pack: center;
     justify-content: center;
-    padding-top: 40px;
-    padding-bottom: 40px;
 }
