--- a/src/styles.css
+++ b/src/styles.css
@@ -42,6 +42,16 @@
 
 /* Sticky footer styles
 -------------------------------------------------- */
+
+.html-root-signed-in {
+	position: relative;
+	min-height: 100%;
+}
+.body-root-signed-in {
+	/* Margin bottom by footer height */
+	margin-bottom: 60px;
+}
+
 .html-root-blank {
     height: 100%!important;
 } 
@@ -49,25 +59,6 @@
     height: 100%!important;
     background-color: #f5f5f5;
 }
-
-html {
-	position: relative;
-	min-height: 100%;
-}
-body {
-	/* Margin bottom by footer height */
-	margin-bottom: 60px;
-}
-.footer {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	/* Set the fixed height of the footer here */
-	height: 60px;
-	line-height: 60px; /* Vertically center the text there */
-	background-color: #f5f5f5;
-}
-
 
 /* Custom page CSS
 -------------------------------------------------- */
